# AegisForensics

./: .gitignore  README.md  a2as.yaml  eslint.config.mjs  package-lock.json  package.json  upload_pcaps.sh
backend/: .env.sample  .gitignore  README.md  aegis_forensics.db  aegis_forensics.db.backup  aegis_forensics.db.bak  main.py  pyproject.toml  requirements.txt  test_script_http.py  update_db.py
backend/agents/: .env.sample  README.md  binary_analyzer.py  custodian_agent.py  disk_analyzer.py  forensic_orchestrator.py  live_response_agent.py  memory_analyzer.py  network_analyzer.py  recon_agent.py  sandbox_agent.py  timeline_agent.py  user_profiler_agent.py
backend/database/: README.md  init_database.py  models.py  schema.sql  utils.py
backend/middleware/: auth_middleware.py
backend/routes/: auth.py  system.py
backend/schemas/: README.md  auth.py  case.py  event.py  evidence.py  script_config.py  system.py
backend/services/: auth.py  script_generator.py  system.py
backend/templates/: linux_template.py  macos_template.py  windows_template.ps1
backend/tools/: README.md  binary_tools.py  custodian_tools.py  disk_tools.py  live_response_tools.py  memory_tools.py  network_tools.py  recon_tools.py  sandbox_tools.py  timeline_tools.py  user_profile_tools.py
src/app/: global-error.tsx  globals.css  home.tsx  layout.tsx  not-found.tsx  page.tsx  page.tsx.backup
src/components/: AuthGuard.tsx  DashboardLayout.tsx  DynamicBackground.tsx  features.tsx  footer.tsx  header.tsx  hero-content.tsx  pulsing-circle.tsx  shader-background.tsx
src/utils/: dateUtils.tsx
(+22 files in other folders)
